--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,6 @@
 title: キハヌジ語を学ぼう
 description: |-
-  <ul>
-    <li>hoge</li>
-    <li>fuga</li>
-    <li>naha</li>
-  </ul>
+  <a href="">初級編</a><br>
+  <a href="">単語帳</a><br>
+  <a href="">リンク集</a>
 theme: jekyll-theme-minimal
