--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: |-
   <a href="walkthrough">初級編</a><br>
   <a href="dictionary">単語帳</a><br>
   <a href="reference">リンク集</a>
-logo: /assets/img/logo.png
+logo: /assets/images/ogmo.jpg
 theme: jekyll-theme-minimal
 github:
   is_project_page: false
