--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 title: キハヌジ語 学習
 description: |-
-  <a href="walkthrough">初級編</a><br>
-  <a href="dictionary">単語帳</a><br>
-  <a href="reference">リンク集</a>
+  > <a href="walkthrough">初級編</a><br>
+  > <a href="dictionary">単語帳</a><br>
+  > <a href="reference">リンク集</a>
 logo: /assets/images/ogmo.jpg
 theme: jekyll-theme-minimal
 github:
