--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: キハヌジ語 学習
 description: |-
+  (絵: 昔かなもけんさんに描いてもらったもの)
   > <a href="walkthrough">初級編</a><br>
   > <a href="dictionary">単語帳</a><br>
   > <a href="reference">リンク集</a>
