--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: キハヌジ語 学習
-url: https://tily.github.io/
+url: https://tily.github.io
 path: /kihwanujish/
 description: |-
   > <a href="walkthrough">初級編</a><br>
