--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: キハヌジ語 学習
+title: キハヌジ語を学ぼう
 #url: https://tily.github.io
 #path: /kihwanujish/
 #baseurl: https://tily.github.io/kihwanujish/
