--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ title: キハヌジ語を学ぼう
 description: |-
   > <a href="/kihwanujish/walkthrough">初級編</a><br>
   > <a href="/kihwanujish/dictionary">単語帳</a><br>
-  > <a href="/kihwanujish/reference">リンク集</a>
+  > <a href="/kihwanujish/reference">リンク集</a><br>
   > <a href="/kihwanujish/manga">マンガで分かるキハヌジ語</a>
 logo: /assets/images/ogmo.jpg
 theme: jekyll-theme-minimal
