--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: |-
   > <a href="/kihwanujish/walkthrough">初級編</a><br>
   > <a href="/kihwanujish/dictionary">単語帳</a><br>
   > <a href="/kihwanujish/reference">リンク集</a><br>
-  > <a href="/kihwanujish/manga">マンガで分かるキハヌジ語</a>
+  > <a href="/kihwanujish/manga">マンガで分かるキハヌジ語講座</a>
 logo: /assets/images/ogmo.jpg
 theme: jekyll-theme-minimal
 github:
