--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ description: |-
   > <a href="/kihwanujish/dictionary">単語帳</a><br>
   > <a href="/kihwanujish/reference">リンク集</a><br>
   > <a href="/kihwanujish/manga">マンガで分かるキハヌジ語講座</a>
+  > <a href="/kihwanujish/buzzwords">流行語大賞</a> 
 logo: /assets/images/ogmo.jpg
 theme: jekyll-theme-minimal
 github:
